--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage{biblatex}
 \bibliography{\jobname.bib}
 
-\title{Abelian varieties and questions of good ordinary reduction}
+\title{On ordinary good reduction of abelian varieties}
 \author{Johan Commelin}
 
 \begin{document}
