Idea about using motives with coefficients

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,17 @@ Conclude that it suffices to look at irreducbile abelian motives.
 Prove the good ordinary reduction conjecture
 for irreducible abelian motives of type $A_n^\wedge$.
 
+$\bullet$\quad Need to figure out how to use categories of motives
+with coefficients in some field~$E$.
+
+If $M$ is an adjoint motive,
+then $E = \mathrm{End}(M)$ is a totally real field.
+Thus we could extend coefficients to the real closure of~$E$,
+and get a nice decomposition of~$M$.
+
+$\bullet$\quad How does this change of coefficients interact
+with the good ordinary reduction conjecture?
+
 \section{Introduction}
 
 Let $K \subset \mathbb{C}$ be a finitely generated field.
