Add amsthm definitions

--- a/main.tex
+++ b/main.tex
@@ -6,14 +6,14 @@
 \usepackage{biblatex}
 \bibliography{\jobname.bib}
 
-% \newtheorem{thm}{Theorem}[section]
-% \newtheorem{lem}[thm]{Lemma}
-% \newtheorem{prop}[thm]{Proposition}
-% \newtheorem{cor}{Corollary}
-% \newtheorem{defn}{Definition}[section]
-% \newtheorem{conj}{Conjecture}[section]
-% \newtheorem{exmp}{Example}[section]
-% \newtheorem{rem}{Remark}
+\newtheorem{thm}{Theorem}[section]
+\newtheorem{lem}[thm]{Lemma}
+\newtheorem{prp}[thm]{Proposition}
+\newtheorem{cor}[thm]{Corollary}
+\newtheorem{dfn}[thm]{Definition}
+\newtheorem{cnj}[thm]{Conjecture}
+\newtheorem{exa}[thm]{Example}
+\newtheorem{rem}[thm]{Remark}
 
 \def\HH{\textnormal{H}}
 
