Rename elliptic curve to C

--- a/main.tex
+++ b/main.tex
@@ -75,21 +75,21 @@ Proof: Follow your nose, Luke!
 
 \section{Introduction}
 
-Let $X$ be an elliptic curve over~$\mathbb{Q}$.
-If $p$ is a prime, and $X$ has good reduction at~$p$,
+Let $C$ be an elliptic curve over~$\mathbb{Q}$.
+If $p$ is a prime, and $C$ has good reduction at~$p$,
 then we can distinguish two types of good reduction:
 so called \emph{ordinary} and \emph{supersingular} reduction.
 In the 1960s % TODO ref
 Serre proved the following facts:
 \begin{itemize}
- \item If $X$ does not have complex multiplication,
-  then $X$ has ordinary good reduction at
+ \item If $C$ does not have complex multiplication,
+  then $C$ has ordinary good reduction at
   a set of primes with density~$1$.
- \item If $X$ has complex multiplication by an
+ \item If $C$ has complex multiplication by an
   imaginary quadratic field~$E$,
-  then $X$ has supersingular reduction
+  then $C$ has supersingular reduction
   at the primes that are inert in $E/\mathbb{Q}$,
-  while $X$ has ordinary reduction at the primes that split.
+  while $C$ has ordinary reduction at the primes that split.
   (Both these sets have density~$1/2$.)
 \end{itemize}
 This example sketches the theme of this paper:
