What happens if you extend coefficients of a HS

--- a/main.tex
+++ b/main.tex
@@ -98,6 +98,25 @@ where a given abelian variety has ordinary good reduction.
 This question has been studied before by
 Noot, Pink, Sawin, and others.
 
+\section{Thoughts and stuff}
+
+\bigskip\noindent
+\emph{What might happen if you extend coeffients of a motive/HS/representation.}\quad
+Suppose that you have a HS~$V$, of abelian type.
+Let's also assume that it is adjoint, and irreducible.
+Let $E = \mathrm{End}(V)$ be the endomorphism algebra.
+For simplicity, we assume that $E$ is Galois over~$\mathbb{Q}$.
+Then we can look at $V \otimes_{\mathbb{Q}} E$.
+Now we get a Hodge structure over~$E$, that splits into $\deg{E}$ pieces.
+According to the embeddings of~$E$ into~$\mathbb{C}$
+that are \emph{compact} or \emph{non-compact} (see Deligne)
+we get pieces that are trivial or non-trivial.
+For the trivial pieces the endomorphism algebra increases,
+and the Mumford--Tate group decreases!
+This is not pathological.
+It just means that over~$E$ there is a smaller Mumford--Tate group,
+but that one couldn't be defined over~$\mathbb{Q}$.
+
 \printbibliography
 
 \end{document}
