Random statements that should find a place

--- a/main.tex
+++ b/main.tex
@@ -100,6 +100,29 @@ Noot, Pink, Sawin, and others.
 
 \section{Thoughts and stuff}
 
+\begin{cnj}
+ Let $K \subset \mathbb{C}$ be a finitely generated field,
+ and let $E$ be a totally real number field.
+ Let $M \in \mathrm{Mot}_K(E)$ be a motive.
+ Assume that $K = K^\diamond(M)$.
+ We denote with $\mathrm{ORC}(M)$ the conjecture:
+ \[
+  \bigl\{ x \in X^\mathrm{cl} \bigm|
+  M~\text{has ordinary reduction at~$x$}\bigr\} \qquad\text{has density~$1$}
+ \]
+\end{cnj}
+
+\begin{thm}
+ Let $K \subset \mathbb{C}$ be a finitely generated field,
+ and let $E$ be a totally real number field.
+ Let $M \in \mathrm{Mot}_K(E)$ be an irreducible adjoint abelian motive.
+ Assume that $\mathrm{End}(M) = E$ and $K = K^\diamond(M)$.
+ If $M$ is of type $A_n^\wedge$ then $\mathrm{ORC}(M)$ holds.
+\end{thm}
+\begin{proof}
+ HELP. TODO!
+\end{proof}
+
 \bigskip\noindent
 \emph{What might happen if you extend coeffients of a motive/HS/representation.}\quad
 Suppose that you have a HS~$V$, of abelian type.
