Record some todos

--- a/main.tex
+++ b/main.tex
@@ -98,6 +98,14 @@ where a given abelian variety has ordinary good reduction.
 This question has been studied before by
 Noot, Pink, Sawin, and others.
 
+\section{Todos}
+
+\begin{itemize}
+ \item Define $K^\diamond(M)$.
+ \item Remark that $\mathrm{ORC}$ is additive.
+ \item Show that $\mathrm{ORC}(M)$ only depends on $M^\mathrm{ad}$.
+\end{itemize}
+
 \section{Thoughts and stuff}
 
 \begin{cnj}
@@ -130,7 +138,7 @@ Let's also assume that it is adjoint, and irreducible.
 Let $E = \mathrm{End}(V)$ be the endomorphism algebra.
 For simplicity, we assume that $E$ is Galois over~$\mathbb{Q}$.
 Then we can look at $V \otimes_{\mathbb{Q}} E$.
-Now we get a Hodge structure over~$E$, that splits into $\deg{E}$ pieces.
+Now we get a Hodge structure over~$E$, that splits into $\deg(E)$ pieces.
 According to the embeddings of~$E$ into~$\mathbb{C}$
 that are \emph{compact} or \emph{non-compact} (see Deligne)
 we get pieces that are trivial or non-trivial.
