--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@ Give an overview of what is known:
 Noot?
 
 Prove that having ordinary reduction at~$v$ only depends on the adjoint motive.
-Conclude that it suffices to look at irreducbile abelian motives.
+Conclude that it suffices to look at irreducible abelian motives.
 
 Prove the good ordinary reduction conjecture
 for irreducible abelian motives of type $A_n^\wedge$.
